2010-06-15 Pierre Wieser <pwieser@trychlos.org>

	* po/POTFILES.in: Add src/nact/nact-ienvironment-tab.c file.

	* src/nact/nact-ienvironment-tab.c: Connect signals.

2010-06-14 Pierre Wieser <pwieser@trychlos.org>

	* src/core/na-icontext-factory.c:
	Change default capabilities to empty list.

	* src/nact/nact-add-capability-dialog.c:
	* src/nact/nact-add-capability-dialog.h:
	* src/nact/nact-add-capability.ui: New files.

	* po/POTFILES.in:
	* src/nact/Makefile.am: Updated accordingly.

	* src/nact/nact-match-list.c:
	* src/nact/nact-match-list.h (nact_match_list_create_model):
	Add match_header parameter.

	* src/nact/nact-ibasenames-tab.c:
	* src/nact/nact-icapabilities-tab.c:
	* src/nact/nact-ifolders-tab.c:
	* src/nact/nact-imimetypes-tab.c:
	* src/nact/nact-ischemes-tab.c: Updated accordingly.

2010-06-13 Pierre Wieser <pwieser@trychlos.org>

	* src/nact/nact-match-list.c:
	* src/nact/nact-match-list.h (nact_match_list_create_model):
	Add on_add_clicked callback parameter.

	* src/nact/nact-ibasenames-tab.c:
	* src/nact/nact-ifolders-tab.c:
	* src/nact/nact-imimetypes-tab.c:
	* src/nact/nact-ischemes-tab.c: Updated accordingly.

	* src/nact/nact-iaction-tab.c:
	Use gtk_bin_get_child() function instead of GTK_BIN()->child.

	* po/POTFILES.in:
	Add src/nact/nact-icapabilities-tab.c, src/nact/nact-ischemes-tab.c.
	Remove src/nact/nact-iconditions-tab.c.

	* src/api/na-core-utils.h:
	* src/core/na-core-utils.c (na_core_utils_selcount_get_ope_int):
	New function.

	* src/nact/nact-icapabilities-tab.c: Implement selection count.

2010-06-11 Pierre Wieser <pwieser@trychlos.org>

	* src/api/na-icontext.h:
	* src/core/na-icontext.c (na_icontext_is_all_mimetypes): New function.

	* src/api/na-object-api.h: Define new getters/setters.

	* src/core/na-icontext-factory.c:
	* src/core/na-object-item-factory.c: Fix comments.

	* src/io-gconf/nagp-reader.c:
	Convert pre-v3 is_multiple, is_file and is_dir parameters.

2010-06-10 Pierre Wieser <pwieser@trychlos.org>
