@@ -45,7 +45,6 @@
  */
 #define TAB_UPDATABLE_PROP_EDITED_ACTION				"nact-tab-updatable-edited-action"
 #define TAB_UPDATABLE_PROP_EDITED_PROFILE				"nact-tab-updatable-edited-profile"
-#define TAB_UPDATABLE_PROP_SELECTED_ROW					"nact-tab-updatable-selected-row"
 #define TAB_UPDATABLE_PROP_EDITABLE						"nact-tab-updatable-editable"
 #define TAB_UPDATABLE_PROP_REASON						"nact-tab-updatable-reason"
 
