@@ -108,12 +108,6 @@ struct NactMainWindowPrivate {
 	NAObjectProfile *edited_profile;
 
 	/**
-	 * Currently selected row.
-	 * May be null if list is empty or selection is multiple.
-	 */
-	NAObjectId      *selected_row;
-
-	/**
 	 * The convenience clipboard object.
 	 */
 	NactClipboard   *clipboard;
@@ -125,7 +119,6 @@ struct NactMainWindowPrivate {
 enum {
 	PROP_EDITED_ITEM = 1,
 	PROP_EDITED_PROFILE,
-	PROP_SELECTED_ROW,
 	PROP_EDITABLE,
 	PROP_REASON
 };
@@ -375,13 +368,6 @@ class_init( NactMainWindowClass *klass )
 			"A pointer to the edited NAObjectProfile",
 			G_PARAM_STATIC_STRINGS | G_PARAM_READWRITE );
 	g_object_class_install_property( object_class, PROP_EDITED_PROFILE, spec );
-
-	spec = g_param_spec_pointer(
-			TAB_UPDATABLE_PROP_SELECTED_ROW,
-			"Selected NAObjectId",
-			"A pointer to the currently selected row",
-			G_PARAM_STATIC_STRINGS | G_PARAM_READWRITE );
-	g_object_class_install_property( object_class, PROP_SELECTED_ROW, spec );
 
 	spec = g_param_spec_boolean(
 			TAB_UPDATABLE_PROP_EDITABLE,
@@ -711,10 +697,6 @@ instance_get_property( GObject *object, guint property_id, GValue *value, GParam
 				g_value_set_pointer( value, self->private->edited_profile );
 				break;
 
-			case PROP_SELECTED_ROW:
-				g_value_set_pointer( value, self->private->selected_row );
-				break;
-
 			case PROP_EDITABLE:
 				g_value_set_boolean( value, self->private->editable );
 				break;
@@ -747,10 +729,6 @@ instance_set_property( GObject *object, guint property_id, const GValue *value, 
 
 			case PROP_EDITED_PROFILE:
 				self->private->edited_profile = g_value_get_pointer( value );
-				break;
-
-			case PROP_SELECTED_ROW:
-				self->private->selected_row = g_value_get_pointer( value );
 				break;
 
 			case PROP_EDITABLE:
@@ -1275,7 +1253,6 @@ on_iactions_list_selection_changed( NactIActionsList *instance, GSList *selected
 		return;
 	}
 
-	window->private->selected_row = NULL;
 	window->private->edited_item = NULL;
 	window->private->editable = FALSE;
 	window->private->reason = 0;
@@ -1284,7 +1261,6 @@ on_iactions_list_selection_changed( NactIActionsList *instance, GSList *selected
 	if( count == 1 ){
 		g_return_if_fail( NA_IS_OBJECT_ID( selected_items->data ));
 		object = NA_OBJECT( selected_items->data );
-		window->private->selected_row = NA_OBJECT_ID( object );
 
 		if( NA_IS_OBJECT_ITEM( object )){
 			window->private->edited_item = NA_OBJECT_ITEM( object );
@@ -1543,7 +1519,6 @@ reload( NactMainWindow *window )
 
 		window->private->edited_item = NULL;
 		window->private->edited_profile = NULL;
-		window->private->selected_row = NULL;
 
 		na_object_unref_items( window->private->deleted );
 		window->private->deleted = NULL;
